--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hari krishna's </title>
+    <title>Hari krishna's Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
